# MusicSyncTool_Linux

./: AboutPage.cpp  AboutPage.h  CMakeLists.txt  CopyResult.cpp  CopyResult.h  LoadingPage.cpp  LoadingPage.h  LoadingPage.ui  MusicSyncTool.cpp  MusicSyncTool.h  MusicSyncTool.qrc  MusicSyncTool.rc  MusicSyncTool.ui  Settings.cpp  Settings.h  Settings.ui  ShowDupe.cpp  ShowDupe.h  ShowDupe.ui  Translation_en_US.ts  Translation_zh_Hans.ts  main.cpp
src/: AboutPage.cpp  AboutPage.h  AboutPage.ui  CopyResult.cpp  CopyResult.h  CopyResult.ui  LoadingPage.cpp  LoadingPage.h  LoadingPage.ui  MusicProperties.h  MusicSyncTool.cpp  MusicSyncTool.h  MusicSyncTool.ui  OperationResult.cpp  OperationResult.h  OperationResult.ui  SettingEntity.h  Settings.cpp  Settings.h  Settings.ui  ShowDupe.cpp  ShowDupe.h  ShowDupe.ui  main.cpp
translations/: Translation_Wenyan.ts  Translation_en_US.qm  Translation_en_US.ts  Translation_zh_Hans.ts  langinfo.json
